[package]
name = "scry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scry"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
reqwest      = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
clap         = { version = "4", features = ["derive"] }
colored      = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tera         = "1"
regex        = "1"
url          = "2"
base64       = "0.21"
tempfile     = "3"
which        = "4"
glob         = "0.3"
anyhow       = "1"
dirs         = "5"
